maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:43: error: ';' expected but 'else' found.
  else{
  ^